--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,21 +2,15 @@
 main:
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
     
-  - title: "Portfolio"
+  - title: "Projects"
     url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+
+  - title: "People"
+    url: /people/
     
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Wiki"
+    url: https://d137.zesoi.fer.hr/wiki 
+
+  - title: "Git"
+    url: https://d137.zesoi.fer.hr/git
